--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
           <!-- input pattern attribute -->
           <input class="mdl-textfield__input" type="text" pattern="-?[0-9]*(\.[0-9]+)?" id="radius" step="0.01" />
           <!-- mdl-textfield__label -->
-          <label class="mdl-textfield__label" for="radius">Base length (mm)</label>
+          <label class="mdl-textfield__label" for="radius">Radius (mm)</label>
           <!-- class "mdl-textfield__error" -->
           <span class="mdl-textfield__error">Input is not a number.</span>
         </div>
